Fix button style on smaller screens

--- a/src/styles/add-plane.css
+++ b/src/styles/add-plane.css
@@ -37,7 +37,7 @@
 }
 
 .add-form button {
-  width: 10%;
+  width: 4rem;
   margin: 0.5rem 0;
   border: none;
   border-radius: 17px;
